# Boss-Chess

./: .gitignore  CHANGELOG.md  README.md  RELEASE_CHECKLIST.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
Boss-Chess-main/: README.md  pyproject.toml  requirements.txt
Boss-Chess-main/.github/workflows/: ci.yml
Boss-Chess-main/.pytest_cache/v/cache/: nodeids
Boss-Chess-main/boss_chess/: config.py  game.py  persistence.py  state.py  types.py
Boss-Chess-main/boss_chess/cheat_events/: __init__.py  core.py
Boss-Chess-main/boss_chess/engine/: __init__.py  engine.py  evaluation.py  search.py
Boss-Chess-main/boss_chess/memes/: provider.py
Boss-Chess-main/boss_chess/modes/: meme.py  normal.py
Boss-Chess-main/boss_chess/trainer/: __init__.py  analysis.py
Boss-Chess-main/boss_chess/ui/: menu.py  terminal.py
Boss-Chess-main/docs/: architecture.md  cheats.md
Boss-Chess-main/tests/: test_meme.py  test_smoke.py
boss_chess/: __init__.py  app_paths.py  cli.py  online.py  persistence.py  preferences.py  replay.py  runtime.py  state.py  stats.py  types.py  utils.py  variants.py
boss_chess/cheat_events/: core.py
boss_chess/engine/: __init__.py  engine.py  evaluation.py  opening_book.py  search.py  stockfish.py
docs/: trainer.md
tests/: test_boss_cheat.py  test_cheat.py  test_memes.py  test_milestone11.py  test_milestone14_engine.py  test_opening_book.py  test_persistence.py  test_preferences_roundtrip.py  test_release_candidate.py  test_release_metadata.py  test_release_version.py  test_smoke.py  test_trainer.py  test_variants_pgn.py
(+25 files in other folders)
