[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boss-chess"
version = "1.0.0"
description = "A modular chess project with trainer, meme, and boss cheat modes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["python-chess>=1.999", "requests>=2.32.0"]

[project.scripts]
boss-chess = "boss_chess.cli:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["boss_chess*"]
